--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
 <head>
   <title>pp-notes | a simple Wysiwyg</title>
+  
+  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
+ <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+ <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  
+  <script src="js/pp-notes.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="css/pp-notes.css" type="text/css">
  </head>
   <body>
     <div class="editor"></div>
